Fix footer spacing Signed-off-by: David Lu <dlu@turn.com>

--- a/css/style.css
+++ b/css/style.css
@@ -284,7 +284,7 @@
 	.fsn-footer .footer-body {
 		width: 980px;
 		margin: 0 auto;
-		padding: 8px 0;
+		padding: 8px 0 8px 120px;
 	}
 	.fsn-footer .footer-body p {
 		margin: 0;
